--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -188,7 +188,7 @@
     let totalAnswers = 0;
     let clickedAnswers = 0;
 
- function loadTextFile() {
+function loadTextFile() {
     const { level, unit } = getLevelAndUnitFromURL();
     const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
@@ -217,11 +217,11 @@
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;" data-answer="${getAnswerFromLine(line)}"></span></p>`;
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="visibility: hidden; opacity: 0;" data-answer="${getAnswerFromLine(line)}"></span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;" data-answer="${cleanedAnswer}"></span></p>`;
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="visibility: hidden; opacity: 0;" data-answer="${cleanedAnswer}"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -264,6 +264,7 @@ function loadLessonContent() {
 function handleAnswerClick(button) {
     const userInput = button.previousElementSibling; // Pega o campo de entrada
     const correctAnswer = button.nextElementSibling.getAttribute('data-answer'); // Obtém a resposta correta
+    const answerSpan = button.nextElementSibling; // O <span> que contém a resposta correta
 
     // Verificar se o usuário já inseriu uma resposta
     if (userInput.value.trim() !== "") {
@@ -280,8 +281,9 @@ function handleAnswerClick(button) {
         // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
 
-        // Exibir a resposta correta (opcional)
-        button.nextElementSibling.style.display = 'inline'; // Torna o <span> visível
+        // Tornar o <span> visível após o clique
+        answerSpan.style.visibility = 'visible';
+        answerSpan.style.opacity = '1'; // Torna o <span> visível
     } else {
         // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso
         alert("Please type an answer before clicking 'Answer'.");
