--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -217,11 +217,12 @@ function loadTextFile() {
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="visibility: hidden; opacity: 0;" data-answer="${getAnswerFromLine(line)}"></span></p>`;
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;" data-answer="${getAnswerFromLine(line)}"></span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="visibility: hidden; opacity: 0;" data-answer="${cleanedAnswer}"></span></p>`;
+                    // Não incluir a resposta diretamente no HTML. Guardamos ela para ser acessada quando o botão for clicado.
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;" data-answer="${cleanedAnswer}"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -281,9 +282,8 @@ function handleAnswerClick(button) {
         // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
 
-        // Tornar o <span> visível após o clique
-        answerSpan.style.visibility = 'visible';
-        answerSpan.style.opacity = '1'; // Torna o <span> visível
+        // Mostrar a resposta corretamente (agora já estará oculta até o clique)
+        answerSpan.style.display = 'inline'; // Torna o <span> visível
     } else {
         // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso
         alert("Please type an answer before clicking 'Answer'.");
