--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -217,12 +217,11 @@ function loadTextFile() {
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;" data-answer="${getAnswerFromLine(line)}"></span></p>`;
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    // Não incluir a resposta diretamente no HTML. Guardamos ela para ser acessada quando o botão for clicado.
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;" data-answer="${cleanedAnswer}"></span></p>`;
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -262,10 +261,8 @@ function loadLessonContent() {
         });
 }
 
-function handleAnswerClick(button) {
+function handleAnswerClick(button, correctAnswer) {
     const userInput = button.previousElementSibling; // Pega o campo de entrada
-    const correctAnswer = button.nextElementSibling.getAttribute('data-answer'); // Obtém a resposta correta
-    const answerSpan = button.nextElementSibling; // O <span> que contém a resposta correta
 
     // Verificar se o usuário já inseriu uma resposta
     if (userInput.value.trim() !== "") {
@@ -282,8 +279,8 @@ function handleAnswerClick(button) {
         // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
 
-        // Mostrar a resposta corretamente (agora já estará oculta até o clique)
-        answerSpan.style.display = 'inline'; // Torna o <span> visível
+        // Mostrar a resposta corretamente (agora gerada dinamicamente)
+        button.nextElementSibling.style.display = 'inline'; // Torna o <span> visível
     } else {
         // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso
         alert("Please type an answer before clicking 'Answer'.");
