--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -217,11 +217,11 @@ function loadTextFile() {
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;"></span></p>`;
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer"></span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer" style="display: none;"></span></p>`;
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -279,8 +279,12 @@ function handleAnswerClick(button, correctAnswer) {
         // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
 
-        // Mostrar a resposta corretamente (agora gerada dinamicamente)
-        button.nextElementSibling.style.display = 'inline'; // Torna o <span> visível
+        // Aqui é onde a resposta é revelada
+        const answerSpan = button.nextElementSibling; // Pega o <span> vazio
+
+        // Adiciona a resposta ao DOM apenas quando o botão for clicado
+        answerSpan.innerText = correctAnswer; // Adiciona a resposta ao <span>
+        answerSpan.style.display = 'inline'; // Exibe o <span> com a resposta
     } else {
         // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso
         alert("Please type an answer before clicking 'Answer'.");
