--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -221,6 +221,7 @@ function loadTextFile() {
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
+                    // Agora, armazenamos a resposta em uma variável para ser utilizada no clique
                     htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
@@ -279,10 +280,8 @@ function handleAnswerClick(button, correctAnswer) {
         // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
 
-        // Aqui é onde a resposta é revelada
+        // Aqui, preenchemos a resposta no <span> agora, de forma dinâmica
         const answerSpan = button.nextElementSibling; // Pega o <span> vazio
-
-        // Adiciona a resposta ao DOM apenas quando o botão for clicado
         answerSpan.innerText = correctAnswer; // Adiciona a resposta ao <span>
         answerSpan.style.display = 'inline'; // Exibe o <span> com a resposta
     } else {
