--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -217,12 +217,12 @@ function loadTextFile() {
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer"></span></p>`;
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    // Agora, armazenamos a resposta em uma variável para ser utilizada no clique
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer"></span></p>`;
+                    // Passar a resposta para o evento de clique no botão
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -264,10 +264,11 @@ function loadLessonContent() {
 
 function handleAnswerClick(button, correctAnswer) {
     const userInput = button.previousElementSibling; // Pega o campo de entrada
+    const answerSpan = button.nextElementSibling; // Pega o <span> que contém a resposta
 
     // Verificar se o usuário já inseriu uma resposta
     if (userInput.value.trim() !== "") {
-        // Se a resposta do usuário estiver correta
+        // Verificar se a resposta do usuário está correta
         if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
             userInput.style.backgroundColor = 'lightblue'; // Resposta correta
         } else {
@@ -280,8 +281,7 @@ function handleAnswerClick(button, correctAnswer) {
         // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
 
-        // Aqui, preenchemos a resposta no <span> agora, de forma dinâmica
-        const answerSpan = button.nextElementSibling; // Pega o <span> vazio
+        // Exibir a resposta corretamente (agora preenchida de forma dinâmica)
         answerSpan.innerText = correctAnswer; // Adiciona a resposta ao <span>
         answerSpan.style.display = 'inline'; // Exibe o <span> com a resposta
     } else {
