--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -215,14 +215,14 @@ function loadTextFile() {
                     currentSection = line.replace('# ', '');
                     htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
                 } else if (line.includes('___')) {
-                    // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
                     htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    // Passar a resposta para o evento de clique no botão
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button><span class="answer" style="display: none;"></span></p>`;
+                    htmlContent += `<p>${question.trim()} <input type="text" class="answer-input" placeholder="Type here..." />
+                                    <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button>
+                                    <span class="answer" style="display: none;">${cleanedAnswer}</span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -263,29 +263,20 @@ function loadLessonContent() {
 }
 
 function handleAnswerClick(button, correctAnswer) {
-    const userInput = button.previousElementSibling; // Pega o campo de entrada
-    const answerSpan = button.nextElementSibling; // Pega o <span> que contém a resposta
+    const userInput = button.previousElementSibling; // Campo de entrada
+    const answerSpan = button.nextElementSibling; // Elemento <span> com a resposta
 
-    // Verificar se o usuário já inseriu uma resposta
     if (userInput.value.trim() !== "") {
-        // Verificar se a resposta do usuário está correta
         if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
             userInput.style.backgroundColor = 'lightblue'; // Resposta correta
         } else {
-            userInput.style.backgroundColor = 'lightcoral'; // Resposta errada
+            userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
         }
 
-        // Exibir a resposta correta no botão
-        button.innerText = `Correct Answer: ${correctAnswer}`;
-
-        // Desabilitar o botão após a resposta ser exibida
-        button.disabled = true; // Desabilita o botão após a resposta ser exibida
-
-        // Exibir a resposta corretamente (agora preenchida de forma dinâmica)
-        answerSpan.innerText = correctAnswer; // Adiciona a resposta ao <span>
-        answerSpan.style.display = 'inline'; // Exibe o <span> com a resposta
+        // Exibe a resposta correta
+        answerSpan.style.display = 'inline';
+        button.disabled = true; // Desabilita o botão após o clique
     } else {
-        // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso
         alert("Please type an answer before clicking 'Answer'.");
     }
 }
