--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -218,11 +218,13 @@ function loadTextFile() {
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
                     htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else if (line.includes('[Answer:')) {
+                    // Separar a resposta da questão
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    htmlContent += `<p>${question.trim()} <input type="text" class="answer-input" placeholder="Type here..." />
-                                    <button class="show-answer-btn" onclick="handleAnswerClick(this, '${cleanedAnswer}')">Answer</button>
-                                    <span class="answer" style="display: none;">${cleanedAnswer}</span></p>`;
+                    htmlContent += `<p>${question.trim()} 
+                                    <input type="text" class="answer-input" placeholder="Type here..." />
+                                    <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="handleAnswerClick(this)">Answer</button>
+                                    <span class="answer" style="display: none;"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -233,6 +235,28 @@ function loadTextFile() {
         .catch(error => {
             console.error('Erro ao carregar o arquivo de texto:', error);
         });
+}
+
+function handleAnswerClick(button) {
+    const userInput = button.previousElementSibling; // Campo de entrada
+    const answerSpan = button.nextElementSibling; // Elemento <span> com a resposta
+    const correctAnswer = button.getAttribute('data-answer'); // Resposta correta armazenada no botão
+
+    if (userInput.value.trim() !== "") {
+        // Comparar respostas, ignorando maiúsculas e minúsculas
+        if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
+            userInput.style.backgroundColor = 'lightblue'; // Resposta correta
+        } else {
+            userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
+        }
+
+        // Exibir a resposta correta
+        answerSpan.textContent = `Correct Answer: ${correctAnswer}`;
+        answerSpan.style.display = 'inline'; // Tornar visível
+        button.disabled = true; // Desabilitar o botão após o clique
+    } else {
+        alert("Please type an answer before clicking 'Answer'.");
+    }
 }
 
 function getAnswerFromLine(line) {
@@ -260,25 +284,6 @@ function loadLessonContent() {
         .catch(error => {
             console.error('Erro ao carregar o arquivo da lição:', error);
         });
-}
-
-function handleAnswerClick(button, correctAnswer) {
-    const userInput = button.previousElementSibling; // Campo de entrada
-    const answerSpan = button.nextElementSibling; // Elemento <span> com a resposta
-
-    if (userInput.value.trim() !== "") {
-        if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
-            userInput.style.backgroundColor = 'lightblue'; // Resposta correta
-        } else {
-            userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
-        }
-
-        // Exibe a resposta correta
-        answerSpan.style.display = 'inline';
-        button.disabled = true; // Desabilita o botão após o clique
-    } else {
-        alert("Please type an answer before clicking 'Answer'.");
-    }
 }
 
     function markActivityAsCompleted() {
