--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -111,10 +111,11 @@
             transform: scale(1.1);
         }
         .answer {
-            font-weight: bold;
-            color: #007bff;
-            margin-left: 10px;
-        }
+    font-weight: bold;
+    color: green;
+    margin-left: 10px;
+    display: none; /* Respostas começam ocultas */
+}
 .answer-input {
     width: 100px;
     padding: 5px;
@@ -214,55 +215,54 @@ function loadTextFile() {
                     }
                     currentSection = line.replace('# ', '');
                     htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
-                } else if (line.includes('___')) {
-                    const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display: none;"></span></p>`;
                 } else if (line.includes('[Answer:')) {
-                    // Separar a resposta da questão
+                    // Separar pergunta e resposta
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
-                    htmlContent += `<p>${question.trim()} 
-                                    <input type="text" class="answer-input" placeholder="Type here..." />
-                                    <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="handleAnswerClick(this)">Answer</button>
-                                    <span class="answer" style="display: none;"></span></p>`;
+
+                    htmlContent += `
+                        <p>
+                            ${question.trim()} 
+                            <input type="text" class="answer-input" placeholder="Type here..." />
+                           <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Answer</button>
+                            <span class="answer" style="display: none;">${cleanedAnswer}</span>
+                        </p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
             });
 
-            contentDiv.innerHTML = htmlContent + '</div>';
+            contentDiv.innerHTML = htmlContent;
         })
-        .catch(error => {
-            console.error('Erro ao carregar o arquivo de texto:', error);
-        });
-}
-
-function handleAnswerClick(button) {
-    const userInput = button.previousElementSibling; // Campo de entrada
-    const answerSpan = button.nextElementSibling; // Elemento <span> com a resposta
-    const correctAnswer = button.getAttribute('data-answer'); // Resposta correta armazenada no botão
-
-    if (userInput.value.trim() !== "") {
-        // Comparar respostas, ignorando maiúsculas e minúsculas
-        if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
-            userInput.style.backgroundColor = 'lightblue'; // Resposta correta
-        } else {
-            userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
-        }
-
-        // Exibir a resposta correta
-        answerSpan.textContent = `Correct Answer: ${correctAnswer}`;
-        answerSpan.style.display = 'inline'; // Tornar visível
-        button.disabled = true; // Desabilitar o botão após o clique
-    } else {
-        alert("Please type an answer before clicking 'Answer'.");
-    }
+        .catch(error => console.error('Erro ao carregar o arquivo:', error));
 }
 
 function getAnswerFromLine(line) {
     // Extrai a resposta de uma linha de texto que contém '[Answer:...]'
     const match = line.match(/\[Answer:(.*?)\]/);
     return match ? match[1].trim() : '';
+}
+
+function checkAnswer(button) {
+    const userInput = button.previousElementSibling; // Campo de texto anterior
+    const answerSpan = button.nextElementSibling; // Resposta oculta
+    const correctAnswer = button.getAttribute('data-answer'); // Resposta correta no botão
+
+    if (userInput.value.trim() === '') {
+        alert('Please type your answer before checking.');
+        return;
+    }
+
+    // Comparação da resposta
+    if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
+        userInput.style.backgroundColor = 'lightgreen'; // Resposta correta
+    } else {
+        userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
+    }
+
+    // Exibir resposta correta
+    answerSpan.style.display = 'inline'; // Tornar visível
+    button.disabled = true; // Desabilitar botão após o clique
 }
 
 function loadLessonContent() {
