--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -220,11 +220,13 @@ function loadTextFile() {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
 
+                    // Substituir ___ pelo campo de entrada diretamente
+                    const questionWithInput = question.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
+
                     htmlContent += `
                         <p>
-                            ${question.trim()} 
-                            <input type="text" class="answer-input" placeholder="Type here..." />
-                           <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Answer</button>
+                            ${questionWithInput} 
+                            <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Answer</button>
                             <span class="answer" style="display: none;">${cleanedAnswer}</span>
                         </p>`;
                 } else {
