--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -216,7 +216,6 @@ function loadTextFile() {
                     currentSection = line.replace('# ', '');
                     htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
                 } else if (line.includes('[Answer:')) {
-                    // Separar pergunta e resposta
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
 
@@ -229,6 +228,7 @@ function loadTextFile() {
                             <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Answer</button>
                             <span class="answer" style="display: none;">${cleanedAnswer}</span>
                         </p>`;
+                    totalAnswers++; // Contar o botão "Answer" adicionado
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -265,6 +265,14 @@ function checkAnswer(button) {
     // Exibir resposta correta
     answerSpan.style.display = 'inline'; // Tornar visível
     button.disabled = true; // Desabilitar botão após o clique
+
+    // Incrementar o contador de botões clicados
+    clickedAnswers++;
+
+    // Verificar se todos os botões foram clicados
+    if (clickedAnswers === totalAnswers) {
+        markActivityAsCompleted(); // Marcar a atividade como concluída
+    }
 }
 
 function loadLessonContent() {
