--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -235,6 +235,7 @@ function loadTextFile() {
             });
 
             contentDiv.innerHTML = htmlContent;
+            console.log(`Total de botões "Answer" carregados: ${totalAnswers}`);
         })
         .catch(error => console.error('Erro ao carregar o arquivo:', error));
 }
@@ -258,8 +259,10 @@ function checkAnswer(button) {
     // Comparação da resposta
     if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
         userInput.style.backgroundColor = 'lightgreen'; // Resposta correta
+        console.log("Resposta correta!");
     } else {
         userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
+        console.log("Resposta incorreta!");
     }
 
     // Exibir resposta correta
@@ -268,9 +271,11 @@ function checkAnswer(button) {
 
     // Incrementar o contador de botões clicados
     clickedAnswers++;
+    console.log(`Botões clicados: ${clickedAnswers} de ${totalAnswers}`);
 
     // Verificar se todos os botões foram clicados
     if (clickedAnswers === totalAnswers) {
+        console.log("Todos os botões foram clicados. Marcando atividade como concluída...");
         markActivityAsCompleted(); // Marcar a atividade como concluída
     }
 }
@@ -296,10 +301,10 @@ function loadLessonContent() {
         });
 }
 
-    function markActivityAsCompleted() {
-        console.log("Atividade concluída!");
-        ensureUserIsAuthenticated(updateNextPhase);
-    }
+   function markActivityAsCompleted() {
+    console.log("Atividade concluída! Chamada da função markActivityAsCompleted.");
+    ensureUserIsAuthenticated(updateNextPhase);
+}
 
     function ensureUserIsAuthenticated(callback) {
         firebase.auth().onAuthStateChanged(function(user) {
