--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -193,6 +193,9 @@ function loadTextFile() {
     const { level, unit } = getLevelAndUnitFromURL();
     const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
+    // Reiniciar o contador para evitar duplicações
+    totalAnswers = 0;
+
     fetch(filePath)
         .then(response => {
             if (!response.ok) {
@@ -343,7 +346,7 @@ function loadLessonContent() {
 }
 
 document.addEventListener('DOMContentLoaded', function() {
-    loadTextFile();
+    loadTextFile(); // Garantir que só será chamada uma vez
     loadLessonContent();
 });
 
