--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -188,13 +188,20 @@
 
     let totalAnswers = 0;
     let clickedAnswers = 0;
+    let isTextFileLoaded = false; // Variável para rastrear se já foi carregado
 
 function loadTextFile() {
+    if (isTextFileLoaded) {
+        console.log("Arquivo de texto já carregado. Ignorando duplicação.");
+        return; // Impede execução duplicada
+    }
+
+    console.log(`Iniciando cálculo de totalAnswers.`);
+    totalAnswers = 0; // Resetar o totalAnswers antes de carregar os botões
+    console.log(`Reset totalAnswers para: ${totalAnswers}`);
+
     const { level, unit } = getLevelAndUnitFromURL();
     const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
-
-    // Reiniciar o contador para evitar duplicações
-    totalAnswers = 0;
 
     fetch(filePath)
         .then(response => {
@@ -222,7 +229,6 @@ function loadTextFile() {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
 
-                    // Substituir ___ pelo campo de entrada diretamente
                     const questionWithInput = question.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
 
                     htmlContent += `
@@ -231,7 +237,8 @@ function loadTextFile() {
                             <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Answer</button>
                             <span class="answer" style="display: none;">${cleanedAnswer}</span>
                         </p>`;
-                    totalAnswers++; // Contar o botão "Answer" adicionado
+                    totalAnswers++;
+                    console.log(`Incrementando totalAnswers: ${totalAnswers}`);
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -239,6 +246,7 @@ function loadTextFile() {
 
             contentDiv.innerHTML = htmlContent;
             console.log(`Total de botões "Answer" carregados: ${totalAnswers}`);
+            isTextFileLoaded = true; // Marca como carregado
         })
         .catch(error => console.error('Erro ao carregar o arquivo:', error));
 }
