--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -189,7 +189,7 @@
     let totalAnswers = 0;
     let clickedAnswers = 0;
     let isTextFileLoaded = false; // Variável para rastrear se já foi carregado
-
+    
 function loadTextFile() {
     if (isTextFileLoaded) {
         console.log("Arquivo de texto já carregado. Ignorando duplicação.");
@@ -353,8 +353,8 @@ function loadLessonContent() {
     return params.get('fase');  // Pega o parâmetro 'fase' da URL
 }
 
-document.addEventListener('DOMContentLoaded', function() {
-    loadTextFile(); // Garantir que só será chamada uma vez
+document.addEventListener('DOMContentLoaded', function () {
+    loadTextFile();
     loadLessonContent();
 });
 
