--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -146,6 +146,14 @@
 </head>
 <body>
 
+<div id="completionModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); z-index:9999;">
+    <div style="background:white; padding:20px; border-radius:8px; max-width:400px; margin:100px auto; text-align:center;">
+        <h2>Congratulations!</h2>
+        <p>You have successfully completed the activity!</p>
+        <button onclick="closeModal()">OK</button>
+    </div>
+</div>
+
 <div class="container">
     <a href="javascript:history.back()" class="back-button">Back</a>
     <h1 id="title">Loading title...</h1>
@@ -271,24 +279,33 @@ function checkAnswer(button) {
     if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
         userInput.style.backgroundColor = 'lightgreen'; // Resposta correta
         console.log("Resposta correta!");
+
+        if (!button.disabled) {
+            clickedAnswers++; // Incrementar contador de respostas corretas apenas uma vez
+            button.disabled = true; // Desabilitar botão se a resposta estiver correta
+        }
     } else {
         userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
-        console.log("Resposta incorreta!");
+        console.log("Resposta incorreta! Por favor, tente novamente.");
     }
 
-    // Exibir resposta correta
-    answerSpan.style.display = 'inline'; // Tornar visível
-    button.disabled = true; // Desabilitar botão após o clique
-
-    // Incrementar o contador de botões clicados
-    clickedAnswers++;
-    console.log(`Botões clicados: ${clickedAnswers} de ${totalAnswers}`);
-
-    // Verificar se todos os botões foram clicados
+    // Checar se todas as respostas estão corretas
+    console.log(`Botões clicados (respostas corretas): ${clickedAnswers} de ${totalAnswers}`);
     if (clickedAnswers === totalAnswers) {
-        console.log("Todos os botões foram clicados. Marcando atividade como concluída...");
+        console.log("Todas as respostas estão corretas. Marcando atividade como concluída...");
         markActivityAsCompleted(); // Marcar a atividade como concluída
+        showCompletionMessage(); // Exibir mensagem de conclusão
     }
+}
+
+function showCompletionMessage() {
+    const modal = document.getElementById('completionModal');
+    modal.style.display = 'block';
+}
+
+function closeModal() {
+    const modal = document.getElementById('completionModal');
+    modal.style.display = 'none';
 }
 
 function loadLessonContent() {
