--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -142,6 +142,23 @@
     background-color: #f0f0f0;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
 }
+
+.see-answer-btn {
+    padding: 8px 15px;
+    background-color: #f0ad4e;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    margin-left: 10px;
+}
+
+.see-answer-btn:hover {
+    background-color: #ec971f;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+}
     </style>
 </head>
 <body>
@@ -237,12 +254,13 @@ function loadTextFile() {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
 
+                    // Substituir ___ pelo campo de entrada diretamente
                     const questionWithInput = question.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
 
                     htmlContent += `
                         <p>
                             ${questionWithInput} 
-                            <button class="show-answer-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Answer</button>
+                            <button class="check-btn" data-answer="${cleanedAnswer}" onclick="checkAnswer(this)">Check</button>
                             <span class="answer" style="display: none;">${cleanedAnswer}</span>
                         </p>`;
                     totalAnswers++;
@@ -253,7 +271,7 @@ function loadTextFile() {
             });
 
             contentDiv.innerHTML = htmlContent;
-            console.log(`Total de botões "Answer" carregados: ${totalAnswers}`);
+            console.log(`Total de botões "Check" carregados: ${totalAnswers}`);
             isTextFileLoaded = true; // Marca como carregado
         })
         .catch(error => console.error('Erro ao carregar o arquivo:', error));
@@ -284,9 +302,25 @@ function checkAnswer(button) {
             clickedAnswers++; // Incrementar contador de respostas corretas apenas uma vez
             button.disabled = true; // Desabilitar botão se a resposta estiver correta
         }
+
+        // Remover o botão "See Answer" se já existir
+        const seeAnswerButton = button.nextElementSibling.nextElementSibling;
+        if (seeAnswerButton) {
+            seeAnswerButton.remove();
+        }
     } else {
         userInput.style.backgroundColor = 'lightcoral'; // Resposta incorreta
         console.log("Resposta incorreta! Por favor, tente novamente.");
+
+        // Criar o botão "See Answer" se ainda não existir
+        let seeAnswerButton = button.nextElementSibling.nextElementSibling;
+        if (!seeAnswerButton) {
+            seeAnswerButton = document.createElement('button');
+            seeAnswerButton.textContent = 'See Answer';
+            seeAnswerButton.className = 'see-answer-btn';
+            seeAnswerButton.onclick = () => showCorrectAnswer(answerSpan);
+            button.parentNode.appendChild(seeAnswerButton);
+        }
     }
 
     // Checar se todas as respostas estão corretas
@@ -296,6 +330,11 @@ function checkAnswer(button) {
         markActivityAsCompleted(); // Marcar a atividade como concluída
         showCompletionMessage(); // Exibir mensagem de conclusão
     }
+}
+
+function showCorrectAnswer(answerSpan) {
+    answerSpan.style.display = 'inline'; // Tornar visível
+    console.log("Resposta correta exibida:", answerSpan.textContent);
 }
 
 function showCompletionMessage() {
