--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -23,6 +23,22 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
         }
+.check-btn {
+    padding: 8px 15px;
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.check-btn:hover {
+    background-color: #f0f0f0;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+}
         .back-button {
             position: absolute;
             top: 20px;
